--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,3 +18,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 #Sql Info
 log4j.logger.org.hibernate.SQL=DEBUG
 
+#Test
+
+
